--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.data.mongodb.uri=mongodb+srv://diviseUser:diviseprod@divise-prod.yayfapa.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=Divise-Dev
